fix: query error box styling in dark mode

--- a/client/src/assets/styles/_color-themes.scss
+++ b/client/src/assets/styles/_color-themes.scss
@@ -69,6 +69,9 @@ body.dark-mode {
   .error {
     color: theme-color("error");
   }
+  .query-error__inner {
+    background-color: theme-color("dark-mode");
+  }
   .success {
     color: theme-color("success");
   }
